# crud_django

./: .env  .gitignore  build.sh  pyproject.toml  requirements.txt
myapp/: models.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
myproject/: settings.py
