[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "your-name", email = "you@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "django (>=4.2,<4.3)",         # <-- Add Django here
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-filter (>=25.1,<26.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
