[tool.poetry]
name = "crud_django"
version = "0.1.0"
description = "A Django CRUD application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.16.0"
django-filter = "^25.1"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
